:hammer: Update build script